# spamchecker

./: Cargo.toml  data.csv
src/: main.rs
